style.css
.text-small{
    font-size: 13px;
    padding-left: 15px;
}

.text-top-bar{
    opacity: 0.75;
}

.search-button{
    font-size: 14px;
    color: rgb(60, 64, 67);
    background-color: rgb(248, 249, 250);
    height: 36px;
    width: 128px;
    border-width: 1px;
    border-radius: 4px;
    border-color: rgb(248, 249, 250);
    border-style: solid;
    margin: 11px 4px 11px 4px;
}

.search-button:focus{
    outline: none;
    box-shadow: 0 0 0 0.5px blue;
}

.search-button:hover{
    border-color: rgb(218, 220, 224);
    border-width: 1px;
}

.bottom-bar{
    padding: 12.5px 0px 12.5px 0px;
    border-top-color: rgb(218, 220, 224);
    border-top-style: solid;
    border-top-width: 1px;
}

.text-bottom-bar{
    font-size: 15px;
    opacity: 0.54;
    padding-left: 27px;
}

#left-links-top{
    margin-left: 10px;
    margin-top: 7px;
}

#right-links-top{
    margin-right: 30px;
}

#sign-in{
    background-color: rgb(67, 135, 253);
    border-color: rgb(67, 135, 253);
    border-radius: 2px;
    border-width: 1px;
    font-weight: 700;
    font-size: 13px;
    padding: 6px 12px 6px 12px;
    margin-left: 15px;
    color: white;
    text-decoration: none;
}

#apps-icon{
    padding: 4px 14px 4px 14px;
    margin-left: 15px;
    background-image: url("images/app-drawer-grey.png");
}

#apps-icon:hover{
    background-image: url("images/app-drawer-black.png");
}

#search-bar-full{
    width: 474px;
    border-color: rgb(223, 225, 229);
    border-width: 1px;
    border-radius: 24px;
    border-style: solid;
    display: inline-block;
    padding: 5px 14px 5px 14px;
}

#search-bar-full:hover{
    box-shadow: 0 0 11px rgba(33,33,33,.2); 
}

#search-bar{
    width: 387px;
    height: 34px;
    border-color: white;
    border-width: 0px;
    box-shadow: none;
    padding: 0px 0px 0px 0px;
    font-size: 16px;
}

#search-bar:focus{
    outline:none;
}

#mag-glass{
    height: 20px;
    width: 20px;
    display: inline-block;
    padding-right: 13px;
    position: relative;
    top: 5px;
}

#search-mic{
    height: 24px;
    width: 24px;
    display: inline-block;
    padding-left: 8px;
    position: relative;
    top: 5px;
}

#search-buttons{
    padding-top: 18px;
    height: 70px;
    display: flex;
    justify-content: center;
}

#french-link{
    color: blue;
}

#french-link:visited{
    color: purple;
    text-decoration: inherit;
}

#french-link:hover{
    text-decoration: underline;
}

#Canada{
    margin-left: 3px;
}

#bottom-links{
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

#left-bottom{
    margin-left: 3px;
    display: flex;
    justify-content: center;
}

#right-bottom{
    margin-right: 30px;
    display: flex;
    justify-content: center;
}

body{
    font-family: arial, sans-serif;
    display: block;
}

header{
    display: flex;
    justify-content: space-between;
    position: relative;
    top: 16px;
    min-width: 474px;
}

main{
    display: block;
    margin-left: auto;
    margin-right: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

footer{
    background-color: rgb(242, 242, 242);
    position: absolute;
    bottom: 0px;
    right: 0px;
    left: 0px;
    min-width: 474px;
}

a:link{
    text-decoration: none;
}

a:hover{
    text-decoration: underline;
}

a:visited{
    color: inherit;
    text-decoration: inherit;
}

